fix typo in .env.example

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ ADMIN_PASSWORD=t0
 SECRET=3450482QT340912A
 
 
-# The following settings only need to be changed if you run Labelit remotly
+# The following settings only need to be changed if you run Labelit remotely
 
 # No need to change if running on localhost
 MONGODB_URI=mongodb://localhost/labelit
